-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
4538
The console log contains 100's of "DEADLOCK POSSIBLE!" errors, followed by debug data and a stack trace. The messages sound like something is seriously wrong, but there's no sign that a deadlock has actually occurred. To the contrary, evidence indicates that the app continues executing and completes successfully.
- Trackbacks
-
Changelog 2.1
Changes from version 2.1.2 to version 2.1.3 Server support for kernels: 2.6.18308.13.1.el5 (RHEL5) 2.6.32279.2.1.el6 (RHEL6) Client support for unpatched kernels: 2.6.18308.13.1.el5 (RHEL5) 2.6.32279.2.1....