LU-1418 osc: remove DEADLOCK error messages

Deadlock is impossible for the current code, and the check
exist from some previous version. It can be removed.

Signed-off-by: Alexander Boyko <alexander_boyko@xyratex.com>
Xyratex-bug-id: MRP-497
Change-Id: Ifbd4270739894c946553952d86ff931c4c707791
Reviewed-on: http://review.whamcloud.com/2825
Tested-by: Hudson
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Jinshan Xiong <jinshan.xiong@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>