lustre/osc/osc_lock.c
@@ -1117,14 +1117,6 @@ static int osc_lock_enqueue_wait(const struct lu_env *env,
                 if (!lockless && osc_lock_compatible(olck, scan_ols))
                         continue;
 
-                /* Now @scan is conflicting with @lock, this means current
-                 * thread have to sleep for @scan being destroyed. */
-                if (scan_ols->ols_owner == osc_env_io(env)) {
-                        CERROR("DEADLOCK POSSIBLE!\n");
-                        CL_LOCK_DEBUG(D_ERROR, env, scan, "queued.\n");
-                        CL_LOCK_DEBUG(D_ERROR, env, lock, "queuing.\n");
-                        libcfs_debug_dumpstack(NULL);
-                }
                 cl_lock_get_trust(scan);
                 conflict = scan;
                 break;
